--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 </head>
 
 <body>
-  <article class="qr-element">
-    <img class="qr-code-img" src="./images/image-qr-code.png" alt="qr code image" />
-    <content class="content">
-      <h1 class="heading">Improve your front-end skills by building projects</h1>
-      <p class="subheading">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </content>
-  </article>
+  <main>
+    <article class="qr-element">
+      <img class="qr-code-img" src="./images/image-qr-code.png" alt="qr code image" />
+      <section class="content">
+        <h1 class="heading">Improve your front-end skills by building projects</h1>
+        <p class="subheading">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </section>
+    </article>
+  </main>
 </body>
 
 </html>
