--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
   <main>
+    <h1 class="sr-only">QR Card Component</h1>
     <article class="qr-element">
+      <h6 class="sr-only"></h6>
       <img class="qr-code-img" src="./images/image-qr-code.png" alt="qr code image" />
       <section class="content">
         <h2 class="heading">Improve your front-end skills by building projects</h2>
